<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_bg"
    android:orientation="vertical"
    tools:context=".SplashActivity">




    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/header" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="50">

        <EditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/splash_hint_enter_account" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/splash_hint_enter_password" />

    </com.google.android.material.textfield.TextInputLayout>




    <FrameLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_marginLeft="16dp"
            android:text="@string/splash_remember"
            android:layout_width="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginRight="16dp"
            android:text="@string/splash_forgot"
            android:layout_gravity="right|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/myButton"
        android:onClick="openHome"
        android:text="@string/splash_btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:background="#707070"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            android:layout_height="1dp"/>

        <TextView
            android:text="@string/splash_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:background="#707070"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_width="0dp"
            android:layout_height="1dp"/>

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/myButton"
        android:onClick="openHome"
        android:text="@string/splash_btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_margin="16dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/splash_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
</LinearLayout>